# GenAI_Langchain

./: .env  README.md  app.py  genai_rag.py  langchain_memory.py  langchain_rag_agent.py  llm_gemeni.py  main.py  national_ai_policy.txt  pyproject.toml  q.txt  questions.txt
.devcontainer/: devcontainer.json
